--- a/index.html
+++ b/index.html
@@ -515,16 +515,8 @@
                                 <img src="images/portfolio/yachting/10.png" class="img-responsive img-centered mobile" alt="">
                                 <img src="images/portfolio/yachting/11.png" class="img-responsive img-centered mobile" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Web Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -570,16 +562,8 @@
                                 <img src="images/portfolio/mymx/13.png" class="img-responsive img-centered mobile" alt="">
                                 <img src="images/portfolio/mymx/14.png" class="img-responsive img-centered mobile" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Web Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -613,16 +597,8 @@
                                 <img src="images/portfolio/skyhook-www/1.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/skyhook-www/2.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:data-toggle="modal" data-target="#modal-skyhook-www"
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Web Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -665,16 +641,8 @@
                                 <img src="images/portfolio/mailtree/10.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/mailtree/11.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Hybrid Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -709,16 +677,8 @@
                                 <img src="images/portfolio/logomaker/3.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/logomaker/4.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Hybrid Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -760,16 +720,8 @@
                                 <img src="images/portfolio/admiral/5.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/admiral/6.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Hybrid Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -803,16 +755,8 @@
                                 <img src="images/portfolio/warwobble/1.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/warwobble/2.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                        </strong>
-                                    </li>
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                        </strong>
-                                    </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        <strong><a href="#">Game Development</a>
                                         </strong>
                                     </li>
                                 </ul>
