--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img class="img-responsive animated flip" src="images/logo-drooids-white.png" style="margin-top:-120px;">
+                        <img id="logo-jumbo" class="logo-jumbo img-responsive animated flip" src="images/logo-drooids-white.png" style="margin-top:-120px;">
                         <div class="intro-text animated fadeIn">
                             <span class="name">Drooids</span>
                             <span class="skills">Powerd by Engineers and Artists.</span>
