--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
-    <script src="js/drooids.js"></script>
+    <script src="js/drooids.js?v=0.001"></script>
 
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100886501ns.gif" /></p></noscript>
 
