task: team image filename to lowercase, add another one

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 centered">
                             <div class="col-lg-4">
-                                <img src="images/team/Dren.png" class="profile-picture">
+                                <img src="images/team/dren.png" class="profile-picture">
                             </div>
                             <div class="col-lg-6 profile-overview">
                                 <h3>Dren Kajmakci</h3>
