--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         </div>
         
         <snippet>
-            <script src="http://app.yachtingsbest.com/widgets/reservation/marina/3203.js"></script>
+            <script src="http://app.yachtingsbest.com/widgets/reservation/marina/3203.js"></script><br/>
         </snippet>
 
     </div>
