task: bunch of changes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img id="logo-jumbo" class="logo-jumbo img-responsive animated flip" src="images/logo-drooids-white.png" style="margin-top:-120px;">
+                        <img id="logo-jumbo" class="logo-jumbo img-responsive animated flipInY" src="images/logo-drooids-white.png" style="margin-top:-120px;">
                         <div class="intro-text animated fadeIn">
                             <span class="name">Drooids</span>
                             <span class="skills">Powerd by Engineers and Artists.</span>
@@ -806,7 +806,7 @@
 
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/drooids.js?v=0.004"></script>
-    <script src="js/contact_me.js?v=0.005"></script>
+    <script src="js/contactMe.js?v=0.005"></script>
 
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100886501ns.gif" /></p></noscript>
 
@@ -815,10 +815,10 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
+
       ga('create', 'UA-50306488-2', 'auto');
       ga('send', 'pageview');
-    
+
     </script>
 
 </body>
