fix image load - #21

--- a/index.html
+++ b/index.html
@@ -570,18 +570,18 @@
                                   User: ind@gmail.com <br>
                                   Pass: 123123123
                                 </p>
-                                <img src="images/portfolio/p1/p1i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i1.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i2.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i3.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i4.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i5.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p1/p1i6.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i1.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i2.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i3.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i4.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i5.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p1/p1i6.png" class="unloaded img-responsive img-centered" alt="">
                                 <h3>Mobile responsive</h3>
-                                <img src="images/portfolio/p1/p1i7.png" class="img-responsive img-centered mobile" alt="">
-                                <img src="images/portfolio/p1/p1i8.png" class="img-responsive img-centered mobile" alt="">
-                                <img src="images/portfolio/p1/p1i9.png" class="img-responsive img-centered mobile" alt="">
-                                <img src="images/portfolio/p1/p1i10.png" class="img-responsive img-centered mobile" alt="">
+                                <img data-src="images/portfolio/p1/p1i7.png" class="unloaded img-responsive img-centered mobile" alt="">
+                                <img data-src="images/portfolio/p1/p1i8.png" class="unloaded img-responsive img-centered mobile" alt="">
+                                <img data-src="images/portfolio/p1/p1i9.png" class="unloaded img-responsive img-centered mobile" alt="">
+                                <img data-src="images/portfolio/p1/p1i10.png" class="unloaded img-responsive img-centered mobile" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Web Development</a>
@@ -615,8 +615,8 @@
                                   Web Design/Programming.<br>
                                   <a href="http://www.mymxlog.com">http://www.mymxlog.com</a>
                                 </p>
-                                <img src="images/portfolio/p2/p2i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p2/p2i1.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p2/p2i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p2/p2i1.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Web Development</a>
@@ -649,18 +649,18 @@
                                   Web Development mail-server-implementation, backbone-js, angularjs, web-programming, javascript, php<br>
                                   Customizable Mail Forwarder client.
                                 </p>
-                                <img src="images/portfolio/p3/p3i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i1.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i2.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i3.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i4.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i5.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i6.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i7.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i1.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i2.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i3.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i4.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i5.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i6.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i7.png" class="unloaded img-responsive img-centered" alt="">
                                 <h3>Mobile responsive</h3>
-                                <img src="images/portfolio/p3/p3i8.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i9.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p3/p3i10.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i8.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i9.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p3/p3i10.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Hybrid Development</a>
@@ -693,10 +693,10 @@
                                   A free professional logo design tool for everyone, focusing on usability and quality.<br>
                                   <a href="http://www.onlinelogomaker.com/">http://www.onlinelogomaker.com/</a>
                                 </p>
-                                <img src="images/portfolio/p4/p4i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p4/p4i1.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p4/p4i2.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p4/p4i3.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p4/p4i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p4/p4i1.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p4/p4i2.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p4/p4i3.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Hybrid Development</a>
@@ -729,7 +729,7 @@
                                   A free professional logo design tool for everyone, focusing on usability and quality.<br>
                                   <a href="http://www.onlinelogomaker.com/">http://www.onlinelogomaker.com/</a>
                                 </p>
-                                <img src="images/portfolio/p5/p5i0.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p5/p5i0.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Hybrid Development</a>
@@ -766,12 +766,12 @@
 
                                   <a href="https://github.com/dud3/ADMIRAL">https://github.com/dud3/ADMIRAL</a>
                                 </p>
-                                <img src="images/portfolio/p6/p6i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p6/p6i1.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p6/p6i2.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p6/p6i3.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p6/p6i4.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p6/p6i5.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i1.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i2.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i3.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i4.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p6/p6i5.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Hybrid Development</a>
@@ -805,8 +805,8 @@
                                   Warcraft 2 prototype, build on using HTML5 technologies and JavaScript. So it makes it playable from the browser. <br><br>
                                   <a href="https://notendur.hi.is/~drk3/test/war/">https://notendur.hi.is/~drk3/test/war/</a>
                                 </p>
-                                <img src="images/portfolio/p7/p7i0.png" class="img-responsive img-centered" alt="">
-                                <img src="images/portfolio/p7/p7i1.png" class="img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p7/p7i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p7/p7i1.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Game Development</a>
