task: hide company trust - #22 and add more images to olm2 - #20

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
 
         <!-- Company Trusts -->
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                 <div class="customers transparent">
@@ -355,7 +355,7 @@
 
                 </div>
             </div>
-        </div>
+        </div -->
 
         <!-- About Section -->
         <section class="success" id="about">
@@ -730,6 +730,8 @@
                                   <a href="http://www.onlinelogomaker.com/">http://www.onlinelogomaker.com/</a>
                                 </p>
                                 <img data-src="images/portfolio/p5/p5i0.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p5/p5i1.png" class="unloaded img-responsive img-centered" alt="">
+                                <img data-src="images/portfolio/p5/p5i2.png" class="unloaded img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Service:
                                         <strong><a href="#">Hybrid Development</a>
