--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     <div class="row">
                         <div class="footer-col col-md-4">
                             <h3>Location</h3>
-                            <p>Ulveveien 19<br>4323 Sandnes<br>Norway</p>
+                            <p>Techical garden<br>Norway</p>
                         </div>
                         <div class="footer-col col-md-4">
                             <h3>Around the Web</h3>
