--- a/index.html
+++ b/index.html
@@ -840,8 +840,8 @@
 
     <script src="js/jqBootstrapValidation.js"></script>
 
-    <script src="js/drooids.js?v=0.004"></script>
-    <script src="js/contactMe.js?v=0.005"></script>
+    <script src="js/drooids.js"></script>
+    <script src="js/contactMe.js"></script>
     <script src="js/imageLoader.js"></script>
 
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100886501ns.gif" /></p></noscript>
