--- a/index.html
+++ b/index.html
@@ -854,7 +854,12 @@
 
       ga('create', 'UA-50306488-2', 'auto');
       ga('send', 'pageview');
+    </script>
 
+    <script>
+      (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+        t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+      })(window, document, '_gscq','script','//widgets.getsitecontrol.com/87828/script.js');
     </script>
 
 </body>
