--- a/about.html
+++ b/about.html
@@ -121,19 +121,19 @@
 
                                     <table class="table">
                                         <tr>
-                                            <th>Current</td>
+                                            <th>Current</th>
                                             <td>SEE University</td>
                                         </tr>
                                         <tr>
-                                            <th>Previous</td>
+                                            <th>Previous</th>
                                             <td>Laboratoire d'Informatique de Grenoble, SEE University</td>
                                         </tr>
                                         <tr>
-                                            <th>Education</td>
+                                            <th>Education</th>
                                             <td>Université Joseph Fourier (Grenoble I)</td>
                                         </tr>
                                         <tr>
-                                            <th>Websites</td>
+                                            <th>Websites</th>
                                             <td><a href="http://www.seeu.edu.mk/en/~b.selimi">Personal Website</a></td>
                                         </tr>
                                     </table>
@@ -160,19 +160,19 @@
 
                                     <table class="table">
                                         <tr>
-                                            <th>Current</td>
+                                            <th>Current</th>
                                             <td>Oslo and Akershus University College of Applied Sciences, South East European University</td>
                                         </tr>
                                         <tr>
-                                            <th>Previous</td>
+                                            <th>Previous</th>
                                             <td>Indiana University, a3m Computers, KFOR, US Military, Camp Bondsteelf</td>
                                         </tr>
                                         <tr>
-                                            <th>Education</td>
+                                            <th>Education</th>
                                             <td>Indiana University</td>
                                         </tr>
                                         <tr>
-                                            <th>Websites</td>
+                                            <th>Websites</th>
                                             <td><a href="https://mexhidferati.wordpress.com/">Personal Website</a></td>
                                         </tr>
                                     </table>
@@ -197,7 +197,7 @@
 
                                     <table class="table">
                                         <tr>
-                                            <th>Education</td>
+                                            <th>Education</th>
                                             <td>Linnaeus university, University of Iceland, SEE University</td>
                                         </tr>
                                         <!-- <tr>
@@ -226,7 +226,7 @@
 
                                     <table class="table">
                                         <tr>
-                                            <th>Education</td>
+                                            <th>Education</th>
                                             <td>University of Iceland</td>
                                         </tr>
                                         <!-- <tr>
@@ -334,7 +334,12 @@
 
       ga('create', 'UA-50306488-2', 'auto');
       ga('send', 'pageview');
+    </script>
 
+    <script>
+      (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+        t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+      })(window, document, '_gscq','script','//widgets.getsitecontrol.com/87828/script.js');
     </script>
 </body>
 
