--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <li class="page-scroll">
                             <a href="#about" class="black">About</a>
                         </li>
-                        <li class="page-scroll">
+                        <!-- li class="page-scroll">
                             <a href="#contact" class="black">Contact</a>
-                        </li>
+                        </li -->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -385,7 +385,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact">
+        <!-- section id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -395,8 +395,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+
                         <form name="sentMessage" id="contactForm" novalidate>
                             <div class="row control-group">
                                 <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -437,7 +436,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section -->
 
         <!-- Footer -->
         <footer class="text-center">
