--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
                         <li class="page-scroll">
                             <a href="index.html?scrollTo=id_page_top" class="black animated fadeIn">Home</a>
                         </li>
-                        <li class="page-scroll">
+                        <!-- li class="page-scroll">
                             <a href="index.html?scrollTo=id_contact" class="black">Contact</a>
-                        </li>
+                        </li -->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
