--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 </div>
             </div>
 
-            <div style="width: 100%; height: 200px;" id="map"></div>
+            <!-- div style="width: 100%; height: 200px;" id="map"></div -->
 
             <div class="footer-below">
                 <div class="container">
