--- a/about.html
+++ b/about.html
@@ -188,6 +188,35 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 centered">
                             <div class="col-lg-4">
+                                <img src="images/team/t4.png" class="profile-picture">
+                            </div>
+                            <div class="col-lg-6 profile-overview">
+                                <h3>Tom Willy Schniller</h3>
+                                <h3>Developer</h3>
+                                <h5>M.Sc.</h5>
+
+                                    <table class="table">
+                                        <tr>
+                                            <th>Fun fact</th>
+                                            <td>Moya is his nick name, he gave himself when he was a kid</td>
+                                        </tr>
+                                        <!-- <tr>
+                                            <th>Websites</td>
+                                            <td>Personal Website, Company Website</td>
+                                        </tr> -->
+                                    </table>
+                            </div>
+
+                        </div><!-- /col-lg-8 -->
+                    </div><!-- /row -->
+                </div> <!-- /container -->
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 centered">
+                            <div class="col-lg-4">
                                 <img src="images/team/t2.png" class="profile-picture">
                             </div>
                             <div class="col-lg-6 profile-overview">
@@ -199,6 +228,10 @@
                                         <tr>
                                             <th>Education</th>
                                             <td>Linnaeus university, University of Iceland, SEE University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Fun fact</th>
+                                            <td>Currently a game egine programmer</td>
                                         </tr>
                                         <!-- <tr>
                                             <th>Websites</td>
@@ -285,7 +318,7 @@
                     </div>
                 </div>
             </div>
-        
+
             <div class="footer-below">
                 <div class="container">
                     <div class="row">
