task: update g-project

--- a/projects/game1/src/index.html
+++ b/projects/game1/src/index.html
@@ -22,6 +22,8 @@
 <!-- /build -->
 
 <!-- build:js main.min.js -->
+<script src="js/browser/DeviceHandler.js"></script>
+
 <script src="js/globals.js"></script>
 <script src="js/browser/EventHandler.js"></script>
 
