--- a/projects/game1/src/index.html
+++ b/projects/game1/src/index.html
@@ -19,28 +19,29 @@
 <!-- build:js phaser.min.js-->
 <script src="js/lib/phaser.js"></script>
 <script src="js/lib/phaser-plugin-isometric.min.js"></script>
+<script src="js/lib/rStats.js"></script>
 <!-- /build -->
 
 <!-- build:js main.min.js -->
-<script src="js/browser/DeviceHandler.js"></script>
+<script src="js/browser/DeviceHandler.js?v=0.8"></script>
 
-<script src="js/globals.js"></script>
-<script src="js/browser/EventHandler.js"></script>
+<script src="js/globals.js?v=0.8"></script>
+<script src="js/browser/EventHandler.js?v=0.8"></script>
 
-<script src="js/logic/EntityManager.js"></script>
-<script src="js/logic/ScreenManager.js"></script>
-<script src="js/logic/MenuManager.js"></script>
-<script src="js/logic/Grid.js"></script>
-<script src="js/logic/Camera.js"></script>
-<script src="js/logic/GUIManager.js"></script>
+<script src="js/logic/EntityManager.js?v=0.8"></script>
+<script src="js/logic/ScreenManager.js?v=0.8"></script>
+<script src="js/logic/MenuManager.js?v=0.8"></script>
+<script src="js/logic/Grid.js?v=0.8"></script>
+<script src="js/logic/Camera.js?v=0.8"></script>
+<script src="js/logic/GUIManager.js?v=0.8"></script>
 
-<script src="js/states/Boot.js"></script>
-<script src="js/states/LoadingScreen.js"></script>
-<script src="js/states/Preloader.js"></script>
-<script src="js/states/Menu.js"></script>
-<script src="js/states/Game.js"></script>
+<script src="js/states/Boot.js?v=0.8"></script>
+<script src="js/states/LoadingScreen.js?v=0.8"></script>
+<script src="js/states/Preloader.js?v=0.8"></script>
+<script src="js/states/Menu.js?v=0.8"></script>
+<script src="js/states/Game.js?v=0.8"></script>
 
-<script src="js/main.js"></script>
+<script src="js/main.js?v=0.8"></script>
 <!-- /build -->
 </body>
 </html>
