--- a/projects/game1/src/index.html
+++ b/projects/game1/src/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CountryLife</title>
 <!-- build:css main.min.css -->
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/main.css?v=0.12">
 <!-- /build -->
 </head>
 
@@ -18,30 +18,31 @@
 
 <!-- build:js phaser.min.js-->
 <script src="js/lib/phaser.js"></script>
+<script src="js/lib/saveCPU.js"></script>
 <script src="js/lib/phaser-plugin-isometric.min.js"></script>
-<script src="js/lib/rStats.js?v=0.9"></script>
+<script src="js/lib/rStats.js"></script>
 <!-- /build -->
 
 <!-- build:js main.min.js -->
-<script src="js/browser/DeviceHandler.js?v=0.9"></script>
+<script src="js/browser/DeviceHandler.js?v=0.12"></script>
 
-<script src="js/globals.js?v=0.9"></script>
-<script src="js/browser/EventHandler.js?v=0.9"></script>
+<script src="js/globals.js?v=0.12"></script>
+<script src="js/browser/EventHandler.js?v=0.12"></script>
 
-<script src="js/logic/EntityManager.js?v=0.9"></script>
-<script src="js/logic/ScreenManager.js?v=0.9"></script>
-<script src="js/logic/MenuManager.js?v=0.9"></script>
-<script src="js/logic/Grid.js?v=0.9"></script>
-<script src="js/logic/Camera.js?v=0.9"></script>
-<script src="js/logic/GUIManager.js?v=0.9"></script>
+<script src="js/logic/EntityManager.js?v=0.12"></script>
+<script src="js/logic/ScreenManager.js?v=0.12"></script>
+<script src="js/logic/MenuManager.js?v=0.12"></script>
+<script src="js/logic/Grid.js?v=0.12"></script>
+<script src="js/logic/Camera.js?v=0.12"></script>
+<script src="js/logic/GUIManager.js?v=0.12"></script>
 
-<script src="js/states/Boot.js?v=0.9"></script>
-<script src="js/states/LoadingScreen.js?v=0.9"></script>
-<script src="js/states/Preloader.js?v=0.9"></script>
-<script src="js/states/Menu.js?v=0.9"></script>
-<script src="js/states/Game.js?v=0.9"></script>
+<script src="js/states/Boot.js?v=0.12"></script>
+<script src="js/states/LoadingScreen.js?v=0.12"></script>
+<script src="js/states/Preloader.js?v=0.12"></script>
+<script src="js/states/Menu.js?v=0.12"></script>
+<script src="js/states/Game.js?v=0.12"></script>
 
-<script src="js/main.js?v=0.9"></script>
+<script src="js/main.js?v=0.12"></script>
 <!-- /build -->
 </body>
 </html>
