--- a/projects/game1/src/index.html
+++ b/projects/game1/src/index.html
@@ -43,6 +43,10 @@
 <script src="js/states/Game.js?v=0.12"></script>
 
 <script src="js/main.js?v=0.12"></script>
+  
+<script>
+if(g_.game.config.renderer instanceof PIXI.CanvasRenderer) { alert('canvas'); } else { alert('webgl'); }
+</script>
 <!-- /build -->
 </body>
 </html>
