tmp: detect renderer

--- a/projects/game1/src/index.html
+++ b/projects/game1/src/index.html
@@ -45,7 +45,7 @@
 <script src="js/main.js?v=0.12"></script>
   
 <script>
-if(g_.game.config.renderer instanceof PIXI.CanvasRenderer) { alert('canvas'); } else { alert('webgl'); }
+if(game.renderer instanceof PIXI.CanvasRenderer) { alert('canvas'); } else { alert('webgl'); }
 </script>
 <!-- /build -->
 </body>
