update headline and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="images/logo-ico.png">
 
-    <title>Drooids - Enjoyable Development</title>
+    <title>Drooids - Precise Software Development</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left animated fadeIn">
-                    <div class="hero-headline"> <h1>You tell, we Realize: Enjoyable Software Development.</h1>
+                    <div class="hero-headline"> <h1>You tell, we Realize. <br>Precise software development.</h1>
                     <a href="about.html" class="hbtn outline-btn large">About Us<span class="light-caret-right"></span></a>
                     </div>
                 </div>
