--- a/index.html
+++ b/index.html
@@ -854,6 +854,16 @@
       })(window, document, '_gscq','script','//widgets.getsitecontrol.com/87828/script.js');
     </script>
 
+<script>
+    function initFreshChat() {
+      window.fcWidget.init({
+        token: "69190c37-45f7-4dc8-a35e-714f154f1680",
+        host: "https://wchat.freshchat.com"
+      });
+    }
+    function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+  </script>
+  
 </body>
 
 </html>
