--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         </div>
                         <div class="footer-col col-md-6">
                             <h3>About Us</h3>
-                            <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make our Cliets Happy and the Software Development Fun and Enjoyable.</a>.</p>
+                            <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make our Cliets Happy and the Software Development Fun and Enjoyable.</p>
                         </div>
                     </div>
                 </div>
